# C-Project_demo

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  calculator.cpp  calculator.cpp.gcov  calculator.gcda  calculator.gcno  jenkinsfile  main.cpp
.github/workflows/: ci.yml  trigger-gitlab.yml
html/: calculator_8cpp.html  calculator_8cpp.js  calculator_8cpp_source.html  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  main_8cpp.html  main_8cpp_source.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_2.js  all_9.js  all_b.js  all_c.js  files_0.js  functions_0.js  pages_2.js  searchdata.js
latex/: calculator_8cpp.tex  calculator_8cpp_source.tex  files.tex  main_8cpp.tex  main_8cpp_source.tex  md__r_e_a_d_m_e.tex  refman.tex
